--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
     "@ember/optional-features": "^0.7.0",
+    "@fortawesome/ember-fontawesome": "^0.1.13",
     "@glimmer/component": "^0.14.0-alpha.3",
+    "babel-eslint": "^8.0.2",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.2.20",
+    "ember-bulma": "^0.4.3",
     "ember-cli": "github:ember-cli/ember-cli#26a2ddba76631085f5c46cd3f74939d595cbe247",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.0",
@@ -31,11 +33,14 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^2.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-sass": "^6.1.3",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "github:emberjs/data#1df833396855d956b817540923dd89338463fec2",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.5.1",
+    "ember-functional-modifiers": "^0.4.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.1.2",
@@ -45,9 +50,18 @@
     "eslint-plugin-ember": "^6.0.1",
     "eslint-plugin-node": "^8.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "sass": "^1.19.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
+  },
+  "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "animate.css": "^3.7.0",
+    "bulma": "^0.5.0",
+    "idb": "^4.0.3",
+    "jsbarcode": "^3.11.0",
+    "papaparse": "^4.6.3"
   }
 }
