--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug",
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "url": "http://localhost:4200/",
+            "sourceMapPathOverrides": {
+              "xc-meet-manager/*": "${workspaceFolder}/app/*"
+            },
             "webRoot": "${workspaceFolder}"
-        }
+          },
     ]
 }
