--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "animate.css": "^3.7.0",
     "bulma": "^0.5.0",
     "idb": "^4.0.3",
+    "idb-keyval": "^3.2.0",
     "jsbarcode": "^3.11.0",
     "papaparse": "^4.6.3"
   }
