fix up the manual & auto detection of place

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "**/node_modules": true,
     "**/semantic": true,
     "**/tmp": true
-  }
+  },
+  "deepcode.review.results.hideInformationIssues": false
 }
