--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "babel-eslint": "^10.0.2",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.2.20",
-    "ember-bulma": "^0.4.3",
     "ember-cli": "^3.13.0-beta.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
+    "ember-cli-bundle-analyzer": "^0.1.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^3.0.1",
@@ -37,16 +37,13 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
-    "ember-data": "~3.13.0-beta.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^6.5.1",
     "ember-functional-modifiers": "^0.4.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.1.3",
-    "ember-source": "~3.13.0-beta.5",
-    "ember-welcome-page": "^3.2.0",
+    "ember-source": "~3.13.0",
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
@@ -57,12 +54,11 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "animate.css": "^3.7.0",
-    "bulma": "^0.5.0",
-    "idb": "^4.0.3",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "bulma": "^0.7.5",
+    "idb": "^4.0.4",
     "idb-keyval": "^3.2.0",
     "jsbarcode": "^3.11.0",
-    "papaparse": "^5.0.0"
+    "papaparse": "^5.1.0"
   }
 }
