--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-bundle-analyzer": "^0.1.0",
+    "ember-cli-clipboard": "^0.13.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.0",
