--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
+    "ember-service-worker": "^0.8.0",
+    "ember-service-worker-asset-cache": "^0.6.4",
+    "ember-service-worker-index": "^0.7.0",
     "ember-source": "~3.13.0",
+    "ember-web-app": "^3.0.1",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
     "loader.js": "^4.7.0",
